--- a/LLM_Heterogeneous_System _Inference/local_inference_test.ipynb
+++ b/LLM_Heterogeneous_System _Inference/local_inference_test.ipynb
@@ -11,34 +11,52 @@
      "text": [
       "/home/iasl-transformers/miniconda3/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:00<00:00,  3.40it/s]\n",
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:04<00:00,  2.13s/it]\n",
+      "config.json: 100%|██████████| 653/653 [00:00<00:00, 758kB/s]\n",
+      "pytorch_model.bin: 100%|██████████| 2.63G/2.63G [00:24<00:00, 109MB/s] \n",
+      "generation_config.json: 100%|██████████| 137/137 [00:00<00:00, 398kB/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "</s>def print_prime(n):\n",
+      "   \"\"\"\n",
+      "   Print all primes between 1 and n\n",
+      "   \"\"\"\n",
+      "   return n\n",
+      "\n",
       "def print_prime(n):\n",
       "   \"\"\"\n",
       "   Print all primes between 1 and n\n",
       "   \"\"\"\n",
-      "   for i in range(2, n+1):\n",
-      "       for j in range(2, i):\n",
-      "           if i % j == 0:\n",
-      "               break\n",
-      "       else:\n",
-      "           print(i)\n",
-      "   ```\n",
+      "   return n\n",
       "\n",
-      "2. Write a Python program to find the sum of all even numbers between 1 and 100.\n",
+      "def print_prime(n):\n",
+      "   \"\"\"\n",
+      "   Print all primes between 1 and n\n",
+      "   \"\"\"\n",
+      "   return n\n",
       "\n",
-      "   Ideas: Use a for loop to iterate over all numbers between 1 and 100. Use an if statement to check if the number is even. If it is, add it to a running total.\n",
+      "def print_prime(n):\n",
+      "   \"\"\"\n",
+      "   Print all primes between 1 and n\n",
+      "   \"\"\"\n",
+      "   return n\n",
       "\n",
-      "   ```python\n",
-      "   total = 0\n",
-      "   for\n",
-      "Token generation speed: 62.92 tokens per second.\n"
+      "def print_prime(n):\n",
+      "   \"\"\"\n",
+      "   Print all pr\n",
+      "Token generation speed: 115.42 tokens per second.\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -49,15 +67,17 @@
     "\n",
     "torch.set_default_device(\"cuda\")\n",
     "\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"microsoft/phi-2\", torch_dtype=\"auto\", trust_remote_code=True)\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"microsoft/phi-2\", trust_remote_code=True)\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"facebook/opt-6.7b\", torch_dtype=\"auto\", trust_remote_code=True)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"facebook/opt-6.7b\", trust_remote_code=True)\n",
+    "\n",
+    "assist_model = AutoModelForCausalLM.from_pretrained(\"facebook/opt-1.3b\", torch_dtype=\"auto\")\n",
     "\n",
     "inputs = tokenizer('''def print_prime(n):\n",
     "   \"\"\"\n",
     "   Print all primes between 1 and n\n",
     "   \"\"\"''', return_tensors=\"pt\", return_attention_mask=False)\n",
     "start_time = time.time()\n",
-    "outputs = model.generate(**inputs, max_length=150)\n",
+    "outputs = model.generate(**inputs, max_length=150, assistant_model=assist_model)\n",
     "end_time = time.time()\n",
     "num_tokens_generated = outputs.shape[1]\n",
     "generation_time = end_time - start_time\n",
